# point_cloud_registration

./: .gitignore  CMakeLists.txt  README.md
include/: covisibility_edge.hpp  depth_frame.hpp  depth_pose_graph_error_term.hpp  depth_pose_graph_optimizer.hpp  depth_to_point_cloud.hpp  eth_dataset.hpp  feature_map_vertices.hpp  icp_registration.hpp  point_cloud_viewer.hpp  relative_pose_error_term.hpp  tum_dataset.hpp  viewer.hpp
src/: depth_frame.cpp  depth_pose_graph_optimizer.cpp  depth_to_point_cloud.cpp  feature_map_vertices.cpp  load_from_ethdataset.cpp  load_from_tum.cpp  load_from_vertices.cpp  main_view.cpp  point_cloud_viewer.cpp
